--- a/pages/gi.html
+++ b/pages/gi.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KnH Emporium</title>
-    <link rel="stylesheet" href="/asset/style.css">
+    <link rel="stylesheet" href="asset/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <a href="/index.html">
+        <a href="index.html">
             <div class="logo"> 
-                <img style="width: 35px;" src="/asset/img/Logo.svg" alt="logoknh">
+                <img style="width: 35px;" src="asset/img/Logo.svg" alt="logoknh">
                 KNH EMPORIUM 
             </div>
         </a>
         <div class="nav-items">
         <a href="https://www.instagram.com/knh.emporium/" target="_blank">
-            <img style="width: 35px;" src="/asset/img/cs.png" alt=language>
+            <img style="width: 35px;" src="asset/img/cs.png" alt=language>
         </a>
         </div>
     </nav>
     <section class="apk">
         <section class="heroapk">
-            <img style="width: 125px;" src="/asset/img/Genshin Impact.webp" alt="logogi">
+            <img style="width: 125px;" src="asset/img/Genshin Impact.webp" alt="logogi">
             <div class="bio">
                 <h2> Genshin Impact Crystals </h2><br>
                 <h3> Top Up Genshin Imapct Crystal legal cepat dan aman! Top up sekarang juga dapatkan karakter yang kamu ingin kan.
@@ -36,7 +36,7 @@
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>80</h4>
                 </div>
                 <div class="price">
@@ -45,7 +45,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>330 <em>(300+30)</em></h4>
                 </div>
                 <div class="price">
@@ -54,7 +54,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>1090 <em>(1980+110)</em></h4>
                 </div>
                 <div class="price">
@@ -63,7 +63,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>2240 <em>(1980+260)</em></h4>
                 </div>
                 <div class="price">
@@ -72,7 +72,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>3880 <em>(3280+600)</em></h4>
                 </div>
                 <div class="price">
@@ -81,7 +81,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>8080 <em>(6480+1600)</em></h4>
                 </div>
                 <div class="price">
@@ -90,7 +90,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/genesiscrystal.webp" alt="crystals">
+                    <img width="30px" src="asset/img/genesiscrystal.webp" alt="crystals">
                     <h4>2x 8080 <em>(6480+1600)</em></h4>
                 </div>
                 <div class="price">
@@ -99,7 +99,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/botw.webp" alt="crystals">
+                    <img width="30px" src="asset/img/botw.webp" alt="crystals">
                     <h4>1xBotW</h4>
                 </div>
                 <div class="price">
@@ -108,7 +108,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/botw.webp" alt="crystals">
+                    <img width="30px" src="asset/img/botw.webp" alt="crystals">
                     <h4>2xBotW</h4>
                 </div>
                 <div class="price">
@@ -117,7 +117,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/botw.webp" alt="crystals">
+                    <img width="30px" src="asset/img/botw.webp" alt="crystals">
                     <h4>3xBotW</h4>
                 </div>
                 <div class="price">
@@ -126,7 +126,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/botw.webp" alt="crystals">
+                    <img width="30px" src="asset/img/botw.webp" alt="crystals">
                     <h4>4xBotW</h4>
                 </div>
                 <div class="price">
@@ -135,7 +135,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/botw.webp" alt="crystals">
+                    <img width="30px" src="asset/img/botw.webp" alt="crystals">
                     <h4>5xBotW</h4>
                 </div>
                 <div class="price">
@@ -146,7 +146,7 @@
         <a class="whatsapp" href="https://wa.me/6285231719988" target="_blank">
             <div>
                 <h2>Order Now</h2>
-                <img width="40px" src="/img/wa.svg" alt="whatsapp">
+                <img width="40px" src="img/wa.svg" alt="whatsapp">
             </div>
         </a>
     </section> 
