--- a/pages/goplay.html
+++ b/pages/goplay.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KnH Emporium</title>
-    <link rel="stylesheet" href="/asset/style.css">
+    <link rel="stylesheet" href="asset/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <a href="/index.html">
+        <a href="index.html">
             <div class="logo"> 
-                <img style="width: 35px;" src="/asset/img/Logo.svg" alt="logoknh">
+                <img style="width: 35px;" src="asset/img/Logo.svg" alt="logoknh">
                 KNH EMPORIUM 
             </div>
         </a>
         <div class="nav-items">
         <a href="https://www.instagram.com/knh.emporium/" target="_blank">
-            <img style="width: 35px;" src="/asset/img/cs.png" alt=language>
+            <img style="width: 35px;" src="asset/img/cs.png" alt=language>
         </a>
         </div>
     </nav>
     <section class="apk">
         <section class="heroapk">
-            <img style="width: 125px;" src="/asset/img/Google Play Store.webp" alt="logogoplay">
+            <img style="width: 125px;" src="asset/img/Google Play Store.webp" alt="logogoplay">
             <div class="bio">
                 <h2> Google Play Card </h2><br>
                 <h3> Top Up Google Play Card legal cepat dan aman!
@@ -36,7 +36,7 @@
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/goplay logo.png" alt="goplay">
+                    <img width="30px" src="asset/img/goplay logo.png" alt="goplay">
                     <h4>Rp. 5.000</h4>
                 </div>
                 <div class="price">
@@ -45,7 +45,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/goplay logo.png" alt="goplay">
+                    <img width="30px" src="asset/img/goplay logo.png" alt="goplay">
                     <h4>Rp. 10.000</h4>
                 </div>
                 <div class="price">
@@ -54,7 +54,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/goplay logo.png" alt="goplay">
+                    <img width="30px" src="asset/img/goplay logo.png" alt="goplay">
                     <h4>Rp. 20.000</h4>
                 </div>
                 <div class="price">
@@ -63,7 +63,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/goplay logo.png" alt="goplay">
+                    <img width="30px" src="asset/img/goplay logo.png" alt="goplay">
                     <h4>Rp. 50.000</h4>
                 </div>
                 <div class="price">
@@ -72,7 +72,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/goplay logo.png" alt="goplay">
+                    <img width="30px" src="asset/img/goplay logo.png" alt="goplay">
                     <h4>Rp. 100.000</h4>
                 </div>
                 <div class="price">
@@ -81,7 +81,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/goplay logo.png" alt="goplay">
+                    <img width="30px" src="asset/img/goplay logo.png" alt="goplay">
                     <h4>Rp. 150.000</h4>
                 </div>
                 <div class="price">
@@ -90,7 +90,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/goplay logo.png" alt="goplay">
+                    <img width="30px" src="asset/img/goplay logo.png" alt="goplay">
                     <h4>Rp. 300.000</h4>
                 </div>
                 <div class="price">
@@ -99,7 +99,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/goplay logo.png" alt="goplay">
+                    <img width="30px" src="asset/img/goplay logo.png" alt="goplay">
                     <h4>Rp. 500.000</h4>
                 </div>
                 <div class="price">
@@ -110,7 +110,7 @@
         <a class="whatsapp" href="https://wa.me/6285231719988" target="_blank">
             <div>
                 <h2>Order Now</h2>
-                <img width="40px" src="/asset/img/WA.svg" alt="whatsapp">
+                <img width="40px" src="asset/img/WA.svg" alt="whatsapp">
             </div>
         </a>
     </section> 
