--- a/pages/valo.html
+++ b/pages/valo.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KnH Emporium</title>
-    <link rel="stylesheet" href="/asset/style.css">
+    <link rel="stylesheet" href="asset/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <a href="/index.html">
+        <a href="index.html">
             <div class="logo"> 
-                <img style="width: 35px;" src="/asset/img/Logo.svg" alt="logoknh">
+                <img style="width: 35px;" src="asset/img/Logo.svg" alt="logoknh">
                 KNH EMPORIUM 
             </div>
         </a>
         <div class="nav-items">
         <a href="https://www.instagram.com/knh.emporium/" target="_blank">
-            <img style="width: 35px;" src="/asset/img/cs.png" alt=language>
+            <img style="width: 35px;" src="asset/img/cs.png" alt=language>
         </a>
         </div>
     </nav>
     <section class="apk">
         <section class="heroapk">
-            <img style="width: 125px;" src="/asset/img/VALORANT.jpeg" alt="logovalo">
+            <img style="width: 125px;" src="asset/img/VALORANT.jpeg" alt="logovalo">
             <div class="bio">
                 <h2> Valorant Points </h2><br>
                 <h3> Top Up Valorant Point legal cepat dan aman! Dapatkan skin senjata impian mu dengan top up di sini.
@@ -36,7 +36,7 @@
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>300</h4>
                 </div>
                 <div class="price">
@@ -45,7 +45,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>625</h4>
                 </div>
                 <div class="price">
@@ -54,7 +54,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>1125</h4>
                 </div>
                 <div class="price">
@@ -63,7 +63,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>1250</h4>
                 </div>
                 <div class="price">
@@ -72,7 +72,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>1650</h4>
                 </div>
                 <div class="price">
@@ -81,7 +81,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>2275</h4>
                 </div>
                 <div class="price">
@@ -90,7 +90,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>2775</em></h4>
                 </div>
                 <div class="price">
@@ -99,7 +99,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>3400</h4>
                 </div>
                 <div class="price">
@@ -108,7 +108,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>4525</h4>
                 </div>
                 <div class="price">
@@ -117,7 +117,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>5050</h4>
                 </div>
                 <div class="price">
@@ -126,7 +126,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>7000</h4>
                 </div>
                 <div class="price">
@@ -135,7 +135,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="/asset/img/valopoint.svg" alt="valopoint">
+                    <img width="30px" src="asset/img/valopoint.svg" alt="valopoint">
                     <h4>8650</h4>
                 </div>
                 <div class="price">
@@ -146,7 +146,7 @@
         <a class="whatsapp" href="https://wa.me/6285231719988" target="_blank">
             <div>
                 <h2>Order Now</h2>
-                <img width="40px" src="/asset/img/WA.svg" alt="whatsapp">
+                <img width="40px" src="asset/img/WA.svg" alt="whatsapp">
             </div>
         </a>
     </section> 
