--- a/pages/ml.html
+++ b/pages/ml.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KnH Emporium</title>
-    <link rel="stylesheet" href="asset/style.css">
+    <link rel="stylesheet" href="../asset/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -13,19 +13,19 @@
     <nav>
         <a href="index.html">
             <div class="logo"> 
-                <img style="width: 35px;" src="asset/img/Logo.svg" alt="logoknh">
+                <img style="width: 35px;" src="../asset/img/Logo.svg" alt="logoknh">
                 KNH EMPORIUM 
             </div>
         </a>
         <div class="nav-items">
         <a href="https://www.instagram.com/knh.emporium/" target="_blank">
-            <img style="width: 35px;" src="asset/img/cs.png" alt=language>
+            <img style="width: 35px;" src="../asset/img/cs.png" alt=language>
         </a>
         </div>
     </nav>
     <section class="apk">
         <section class="heroapk">
-            <img style="width: 125px;" src="asset/img/Mobile legend.png" alt="logoml">
+            <img style="width: 125px;" src="../asset/img/Mobile legend.png" alt="logoml">
             <div class="bio">
                 <h2> Mobile Legend Diamonds </h2><br>
                 <h3> Top Up Mobile Legend Diamond legal cepat dan aman! 
@@ -37,7 +37,7 @@
         <section class="kategori">
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>86 <em>(78+8)</em></h4>
                 </div>
                 <div class="price">
@@ -46,7 +46,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>172 <em>(156+16)</em></h4>
                 </div>
                 <div class="price">
@@ -55,7 +55,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>285 <em>(250+16)</em></h4>
                 </div>
                 <div class="price">
@@ -64,7 +64,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>344 <em>(312+32)</em></h4>
                 </div>
                 <div class="price">
@@ -73,7 +73,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>429 <em>(390+39)</em></h4>
                 </div>
                 <div class="price">
@@ -82,7 +82,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>514 <em>(468+46)</em></h4>
                 </div>
                 <div class="price">
@@ -91,7 +91,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>600 <em>(546+54)</em></h4>
                 </div>
                 <div class="price">
@@ -100,7 +100,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>706 <em>(625+81)</em></h4>
                 </div>
                 <div class="price">
@@ -109,7 +109,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>878 <em>(781+97)</em></h4>
                 </div>
                 <div class="price">
@@ -118,7 +118,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>1050 <em>(937+113)</em></h4>
                 </div>
                 <div class="price">
@@ -127,7 +127,7 @@
             </div>
             <div class="item"> 
                 <div class="tokengame">
-                    <img width="30px" src="asset/img/Diamond.webp" alt="diamond">
+                    <img width="30px" src="../asset/img/Diamond.webp" alt="diamond">
                     <h4>1412 <em>(1250+162)</em></h4>
                 </div>
                 <div class="price">
@@ -138,7 +138,7 @@
         <a class="whatsapp" href="https://wa.me/6285231719988" target="_blank">
             <div>
                 <h2>Order Now</h2>
-                <img width="40px" src="asset/img/WA.svg" alt="whatsapp">
+                <img width="40px" src="../asset/img/WA.svg" alt="whatsapp">
             </div>
         </a>
     </section> 
