perkara titik titik

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KnH Emporium</title>
-    <link rel="stylesheet" href="../asset/style.css">
+    <link rel="stylesheet" href="asset/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -13,53 +13,53 @@
     <nav>
         <a href="index.html">
             <div class="logo"> 
-                <img style="width: 35px;" src="../asset/img/Logo.svg" alt="logoknh">
+                <img style="width: 35px;" src="asset/img/Logo.svg" alt="logoknh">
                 KNH EMPORIUM 
             </div>
         </a>
         <div class="nav-items">
         <a href="https://www.instagram.com/knh.emporium/" target="_blank">
-            <img style="width: 35px;" src="../asset/img/cs.png" alt=language>
+            <img style="width: 35px;" src="asset/img/cs.png" alt=language>
         </a>
         </div>
     </nav>
     <section class="hero">
         <div class="banner">
-            <img style="width: 1000px;" src="../asset/img/Hero alt.svg" alt="banner">
+            <img style="width: 1000px;" src="asset/img/Hero alt.svg" alt="banner">
         </div>
     </section>
 
     <section class="topup">
         <h1 style="margin-left: 60px;">Top Up</h1>
         <div class="items">
-            <a href="ml.html">
+            <a href="pages/ml.html">
                 <div>
-                    <img style="width: 150px;" src="../asset/img/Mobile legend.png" alt=mlbb>
+                    <img style="width: 150px;" src="asset/img/Mobile legend.png" alt=mlbb>
                     <h3>Mobile Legend</h3>
                 </div>
             </a>
-            <a href="valo.html">
+            <a href="pages/valo.html">
                 <div>
-                    <img style="width: 150px;" src="../asset/img/VALORANT.jpeg" alt=valorant>
+                    <img style="width: 150px;" src="asset/img/VALORANT.jpeg" alt=valorant>
                     <h3>Valorant</h3>
                 </div>
             </a>
-            <a href="gi.html">
+            <a href="pages/gi.html">
                 <div>
-                    <img style="width: 150px;" src="../asset/img/Genshin Impact.webp" alt=genshin>
+                    <img style="width: 150px;" src="asset/img/Genshin Impact.webp" alt=genshin>
                     <h3>Genshin Impact</h3>
                 </div>
             </a>
-            <a href="steam.html">
+            <a href="pages/steam.html">
                 <div>
-                    <img style="width: 150px;" src="../asset/img/Steam.jpeg" alt=steam>
+                    <img style="width: 150px;" src="asset/img/Steam.jpeg" alt=steam>
                     <h3>Steam</h3>
             
                 </div>
             </a>
-            <a href="goplay.html">
+            <a href="pages/goplay.html">
                 <div>
-                    <img style="width: 150px;" src="../asset/img/Google Play Store.webp" alt=googleplay>
+                    <img style="width: 150px;" src="asset/img/Google Play Store.webp" alt=googleplay>
                     <h3>Google Play Store</h3>
                 </div>
             </a>
