--- a/pages/ml.html
+++ b/pages/ml.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">
+        <a href="../index.html">
             <div class="logo"> 
                 <img style="width: 35px;" src="../asset/img/Logo.svg" alt="logoknh">
                 KNH EMPORIUM 
